Add git to mkosi configuration

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -42,6 +42,7 @@ Packages=
     efivar
     fedora-asahi-remix-scripts
     findutils
+    git
     grub2-efi-aa64
     grub2-efi-aa64-modules
     grubby
